@@ -1,6 +1,7 @@
 2015-11-05 Erwin Waterlander <waterlan@xs4all.nl>
 	* common.c: Fix option -iso. The -iso option was misinterpreted
 	  as a corrupted -i option.
+	* test/iso.t: Added two tests for option -iso.
 
 2015-10-09 Rafael Fontenelle <rffontenelle@gmail.com>
 	* po/pt_BR.po: Updated Brazilian Portuguese translation.
